// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Modal 1`] = `
<div
  id="modal-root"
  style="overflow: hidden;"
>
  <div
    aria-hidden="true"
    class="Picasso-root"
  />
  <div
    class="MuiDialog-root makeStyles-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container makeStyles-container MuiDialog-scrollPaper"
      role="document"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper makeStyles-paper makeStyles-medium MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
        role="dialog"
      >
        <div
          class="ModalTitle-root"
        >
          <h3
            class="MuiTypography-root Typography-headingMedium MuiTypography-h3"
          >
            Title
          </h3>
        </div>
        <div
          class="ModalContent-root"
        >
          Modal test content
        </div>
        <div
          class="ModalActions-root"
        >
          <button
            class="MuiButtonBase-root makeStyles-medium makeStyles-flat makeStyles-root"
            tabindex="0"
            type="button"
          >
            <span
              class="Container-flex Container-inline makeStyles-content"
              style="align-items: center;"
            >
              Cancel
            </span>
          </button>
          <button
            class="MuiButtonBase-root makeStyles-medium makeStyles-primaryGreen makeStyles-root"
            tabindex="0"
            type="button"
          >
            <span
              class="Container-flex Container-inline makeStyles-content"
              style="align-items: center;"
            >
              Update
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`useModals opens and closes modal 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root makeStyles-medium makeStyles-primaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root makeStyles-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container makeStyles-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper makeStyles-paper makeStyles-medium MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
            role="dialog"
          >
            <p>
              Modal content
            </p>
            <button
              class="MuiButtonBase-root makeStyles-medium makeStyles-primaryBlue makeStyles-root"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-flex Container-inline makeStyles-content"
                style="align-items: center;"
              >
                Hide
              </span>
            </button>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`useModals opens and closes modal 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
      style=""
    >
      <button
        class="MuiButtonBase-root makeStyles-medium makeStyles-primaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`useModals shows multiple modals at the same time 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root makeStyles-medium makeStyles-primaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Show first
        </span>
      </button>
      <button
        aria-hidden="true"
        class="MuiButtonBase-root makeStyles-medium makeStyles-primaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Show second
        </span>
      </button>
      <div
        aria-hidden="true"
        class="MuiDialog-root makeStyles-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container makeStyles-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper makeStyles-paper makeStyles-medium MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
            role="dialog"
          >
            <p>
              First modal content
            </p>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
      <div
        class="MuiDialog-root makeStyles-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container makeStyles-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiDialog-paper makeStyles-paper makeStyles-medium MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse"
            role="dialog"
          >
            <p>
              Second modal content
            </p>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;
